Fixed the mobile header on mobile devices

--- a/src/css/MainMenu.scss
+++ b/src/css/MainMenu.scss
@@ -399,6 +399,17 @@
 @media only screen and (max-width: 820px){
 	.mainmenu{
 		.header{
+			height: 50px;
+
+			.logo{
+				width: 188px;
+				height: 52px;
+			}
+
+			.bg-hider{
+				display: none;
+			}
+
 			.mobile-bg{
 				&.open{
 					width: 100%;
@@ -413,7 +424,7 @@
 			}
 			.hamburger{
 				display: block;
-				margin: 16px 34px;
+				margin: 6px 16px;
 				top: 0;
 				right: 0;
 				z-index: 2;
@@ -423,7 +434,7 @@
 				flex-wrap: wrap;
 				justify-content: flex-end;
 				z-index: 2;
-				margin-top: 64px;
+				margin: 64px 8px 0 0;
 				width: 300px;
 				display: none;
 
